<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/giveblood1"
    android:orientation="vertical"
    tools:context="com.binary.blood.bloodbankmanagement.application.activitydomain.LoginActivity">
    <LinearLayout
        android:id="@+id/usernameAndPassward"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="top"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#03A9F4"
                android:padding="10dp"
                android:text="@string/login"
                android:textColor="#000"
                android:textSize="20sp" />



        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/email"
                android:textColor="#000" />

            <EditText
                android:id="@+id/userNameGetValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/enter_your_username"
                android:padding="10dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/passTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/passward"
                android:textColor="#000" />

            <EditText
                android:id="@+id/passwardGetValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/enter_your_passward"
                android:inputType="textPassword"
                android:maxLength="25"
                android:maxLines="1"
                android:padding="10dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="#43A047"
                android:gravity="center"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/myCustomTextColorWhite" />


        </LinearLayout>


    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/findBloodBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="#43A047"
            android:text="@string/find_blood"
            android:textAllCaps="false"
            android:textColor="@color/myCustomTextColorWhite" />
        <Button
            android:id="@+id/doneteBloodBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="#D32F2F"
            android:text="@string/donate_blood"
            android:textAllCaps="false"
            android:textColor="@color/myCustomTextColorWhite" />


    </LinearLayout>

</LinearLayout>
