<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_regestration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context="com.binary.blood.bloodbankmanagement.application.activitydomain.RegestrationActivity">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#F44336"
                android:padding="10dp"
                android:text="Donner Registration Form"
                android:textColor="#fff"
                android:textSize="20sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Full Name:"
                android:textColor="@color/myCustomTextColorBlack"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/memberNameET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:hint="Enter your full name"
                android:padding="5dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Email:"
                android:textColor="@color/myCustomTextColorBlack"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/memberEmailET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:hint="Enter a valid email"
                android:inputType="textEmailAddress"
                android:padding="5dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Phone:"
                android:textColor="@color/myCustomTextColorBlack"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/memberPhoneET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:hint="Enter your phone number"
                android:inputType="phone"
                android:padding="5dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Passward:"
                android:textColor="@color/myCustomTextColorBlack"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/memberPassET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:hint="Choose a passward"
                android:inputType="textPassword"
                android:padding="5dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/re_type_passward"
                android:textColor="@color/myCustomTextColorBlack"
                android:textSize="@dimen/smallFont" />

            <EditText
                android:id="@+id/memberPassETConfirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:hint="@string/re_type_your_passward"
                android:inputType="textPassword"
                android:padding="5dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="@dimen/smallPadding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/lightSmallPadding"
                android:text="@string/location"
                android:textColor="@color/myCustomTextColorBlack"
                android:textSize="@dimen/mediumTextSize" />

            <EditText
                android:id="@+id/memberLocationET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:hint="@string/enter_your_location"
                android:padding="@dimen/lightSmallPadding" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTopMedium"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:padding="@dimen/smallPadding">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/lightSmallPadding"
                android:text="Choose your blood group:"
                android:textColor="@color/myCustomTextColorBlack"
                android:textSize="@dimen/mediumTextSize" />

            <Spinner
                android:id="@+id/memberBGSpinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawSelectorOnTop="true"
                android:entries="@array/spinnerItems"
                android:padding="@dimen/lightSmallPadding">


            </Spinner>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/registerBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryBtn"
                android:onClick="save"
                android:text="@string/register"
                android:textColor="@color/myCustomTextColorWhite" />


        </LinearLayout>



    </LinearLayout>

</LinearLayout>



